--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,54 +1,70 @@
-<%- include('partials/header') %>
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
 
-<div class="container mt-5">
-  <h1>Login</h1>
+<head>
+  <meta charset="utf-8">
+  <title>Secrets</title>
+  <link href="https://fonts.googleapis.com/css2?family=Dangrek&family=Roboto+Slab&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/bootstrap-social.css">
+  <link rel="stylesheet" href="css/reg.css">
+</head>
 
-  <div class="row">
-    <div class="col-sm-8">
-      <div class="card">
-        <div class="card-body">
+<body>
 
-          <!-- Makes POST request to /login route -->
-          <form action="/login" method="POST">
-            <div class="form-group">
-              <label for="email">Email</label>
-              <input type="email" class="form-control" name="username">
-            </div>
-            <div class="form-group">
-              <label for="password">Password</label>
-              <input type="password" class="form-control" name="password">
-            </div>
-            <button type="submit" class="btn btn-dark">Login</button>
-          </form>
 
+  <div class="container mt-5">
+    <h1>Login</h1>
+
+    <div class="row">
+      <div class="col-sm-8 col-12">
+        <div class="card">
+          <div class="card-body re">
+
+            <!-- Makes POST request to /login route -->
+            <form action="/login" method="POST">
+              <div class="form-group">
+                <label for="email">Email</label>
+                <input type="email" class="form-control" name="username">
+              </div>
+              <div class="form-group">
+                <label for="password">Password</label>
+                <input type="password" class="form-control" name="password">
+              </div>
+              <button type="submit" class="btn btn-dark">Login</button>
+            </form>
+
+          </div>
         </div>
       </div>
-    </div>
 
-    <div class="col-sm-4">
-      <div class="card">
-        <div class="card-body">
-          <a class="btn btn-block btn-social btn-google" href="/auth/google" role="button">
-            <i class="fab fa-google"></i>
-            Sign In with Google
-          </a>
-        </div>
-        <div class="card-body">
-          <a class="btn btn-block btn-social btn-facebook" href="/auth/facebook" role="button">
-            <i class="fab fa-facebook"></i>
-            Sign Up with Facebook
-          </a>
-        </div>
-        <div class="card-body">
-          <a class="btn btn-block btn-social btn-github" href="/auth/github" role="button">
-            <i class="fab fa-github"></i>
-            Sign Up with GitHub
-          </a>
+      <div class="col-sm-4 col-11">
+        <div class="card social-block">
+          <div class="card-body ha">
+            <a class="btn btn-block btn-social btn-google" href="/auth/google" role="button">
+              <i class="fab fa-google"></i>
+              Login with Google
+            </a>
+          </div>
+          <div class="card-body ha">
+            <a class="btn btn-block btn-social btn-facebook" href="/auth/facebook" role="button">
+              <i class="fab fa-facebook"></i>
+              Login with Facebook
+            </a>
+          </div>
+          <div class="card-body ha">
+            <a class="btn btn-block btn-social btn-github" href="/auth/github" role="button">
+              <i class="fab fa-github"></i>
+              Login with GitHub
+            </a>
+          </div>
         </div>
       </div>
-    </div>
 
+    </div>
   </div>
-</div>
 
-<%- include('partials/footer') %>
+</body>
+
+</html>
