--- a/views/secrets.ejs
+++ b/views/secrets.ejs
@@ -1,14 +1,13 @@
 <%- include('partials/header') %>
 
-<div class="jumbotron text-center">
-  <div class="container">
+<div class=" text-center">
+  <div class="container c2">
     <i class="fas fa-key fa-6x"></i>
     <h1 class="display-3">You've Discovered My Secret!</h1>
 
     <% usersWithSecrets.forEach(function(user){ %>
       <p class="secret-text"><%=user.secret%></p>
     <% }); %>
-
     <hr>
 
     <a class="btn btn-light btn-lg" href="/logout" role="button">Log Out</a>
