--- a/public/css/reg.css
+++ b/public/css/reg.css
@@ -40,3 +40,10 @@ h1 {
   top: 192px;
   left: 118px;
 }
+/* 
+font-size: 22px;
+color: #007c7c;
+line-height: 40px;
+font-weight: 700;
+text-transform: capitalize;
+margin-bottom: 30px!important; */
